--- a/Documents/Report/FinalReportVersions/Version04/MaterialsAndMethodsModel.tex
+++ b/Documents/Report/FinalReportVersions/Version04/MaterialsAndMethodsModel.tex
@@ -82,7 +82,7 @@ We present here a model for nucleosomes and DNA re-organization following UV dam
 Following the experimental protocol, a 2D circular initial damage region (IDR), induced by the UV laser beam, is centered around the focal point (origin of the coordinates) with a fixed area of $A_0$. Following laser induction with UV dose, $u$, the tagged damage region expands radially outward and reaches it maximal area of $A(u)$ after 15 minutes. At the end of expansion, the circular region, characterized by $A(u)$, is defined as the ROI, which remains a fixed region for the measurement of signals at time 0 and 15 minutes. The fraction of signal loss is obtained by the ratio between measurements at the two times (see also the empirical definition in XXX). 
 
 We assume that the loss of DNA and nucleosomes signal post UVC is due to two mechanisms: the first is chromatin expansion, and the second is nucleosomes sliding along the chromatin. In the first mechanism, recruitment and binding of repair factors to damaged DNA causes chromatin de-compaction, release of cross-links, and expansion of the chromatin in the IDR. Because the majority of damages are inflicted around the laser's focal point, the accumulation of repair factors will cause pushing force to surrounding chromatin in a radial outward direction, which result in DNA and nucleosome extrusion from the ROI in equal proportions. In the second mechanism, repair factors slide nucleosomes along the chromatin to facilitate efficient repair of DNA by exposing the damaged positions. 
-Sliding histones over damaged positions on the DNA displaces the tagged damages spatially in the general direction of the ROI, and expand the IDR. 
+Sliding nucleosomes over damaged positions on the DNA displaces the tagged damages spatially in the general direction of the ROI, and expand the IDR. 
  
 Using the description above, we construct a model representing signal loss 15 minutes post UVC. We do not specifically take into account the mechanism of signal loss in time and only model the steady-state equations as a function of the UV dose.
 
@@ -130,7 +130,7 @@ with $k_N$ a constant describing the rate of nucleosome depletion from the ROI d
 N(u) = N_0\exp\left(-k_N\frac{T(u)}{T_{max}})\right).
 \end{equation}
 
-Next, we model the dynamics of the ROI area $A(u)$ with increasing UV dose.  For this end, we consider the ROI expansion to be affected by two additive mechanisms: one is chromatin de-compaction, and the other is histone sliding. 
+Next, we model the dynamics of the ROI area $A(u)$ with increasing UV dose.  For this end, we consider the ROI expansion to be affected by two additive mechanisms: one is chromatin de-compaction, and the other is nucleosome sliding. 
 
 \begin{equation}\label{dralpha}
 \frac{dA(u)}{du}=-k_A\frac{dN(u)}{du}+k_B\frac{dT(u)}{du}
@@ -170,8 +170,8 @@ Plugging these values into DNA loss equation \ref{eq:DnaLoss} and calculating th
 \label{fig:histoneAndDnaVsUvDoseModelFit}
 \end{figure}
 
-\subsection{Relative contribution of opening and sliding to DNA and histone loss}
-Using the calibrated model in equation \ref{eq:DnaLoss} and \ref{eq:histoneLoss}, we now calculate the relative contribution of chromatin opening and histone sliding to the total loss of DNA and nucleosomes.
+\subsection{Relative contribution of opening and sliding to DNA and nucleosome signal loss}
+Using the calibrated model in equation \ref{eq:DnaLoss} and \ref{eq:histoneLoss}, we now calculate the relative contribution of chromatin opening and nucleosome sliding to the total loss of DNA and nucleosomes.
 We start by partitioning the ROI area dynamics into the two sub-mechanisms of signal loss
 \begin{equation*}
 A(u) = A(u)_{opening}+A(u)_{sliding}
@@ -195,7 +195,7 @@ and the complementary function
 \end{equation}
 indicates the relative contribution of sliding to the total DNA loss. 
 
-Similarly, the relative contribution of opening to the total histone loss is given by 
+Similarly, the relative contribution of opening to the total nucleosome loss is given by 
 \begin{equation}\label{eq:openingContributionHistones}
 \frac{H_{opening}}{H(u)} =\frac{\left(A(0)_{opening}/A_0\right)-1}{(A(u)/A_0)-(N(u)/N_0)}
 \end{equation}
@@ -216,7 +216,7 @@ Using the parameter values in subsection \ref{subsection:parameterFit} and plugg
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.5\linewidth, height=0.3\textheight]{fractionSlidingOutOfIDR}
-\caption{\textbf{Fraction of nucleosomes sliding out of the IDR.Th eplot against the experimental data results in $R^2=0.89$ }}
+\caption{\textbf{Fraction of nucleosomes sliding out of the IDR.The plot against the experimental data results in $R^2=0.89$ }}
 \label{fig:fractionSlidingOutOfIDR}
 \end{figure}
 
